--- a/config.toml
+++ b/config.toml
@@ -11,11 +11,12 @@ disablePathToLower = true # 禁止将路径全部改为小写
 # Syntax highlighting by Chroma. NOTE: Don't enable `highlightInClient` and `chroma` at the same time!
 pygmentsOptions = "linenos=table"
 pygmentsCodefences = true
-pygmentsUseClasses = true
+#pygmentsUseClasses = true
 pygmentsCodefencesGuessSyntax = true
+pygmentsStyle = "monokai"
 markup = "markdown" # 格式化 markdown
 hasCJKLanguage = true     # has chinese/japanese/korean ? # 自动检测是否包含 中文\日文\韩文
-paginate = 5                                              # 首页每页显示的文章数
+paginate = 10                                           # 首页每页显示的文章数
 disqusShortname = ""      # disqus_shortname
 # googleAnalytics = "UA-138883536-1"      # UA-XXXXXXXX-X
 copyright = "© Copyright 2019 umiringo"            # default: author.name ↓        # 默认为下面配置的author.name ↓
@@ -26,10 +27,11 @@ copyright = "© Copyright 2019 umiringo"            # default: author.name ↓  
 [author]                  # essential                     # 必需
   name = "umiringo"
 
-[Params]
+[params]
   description = "fuck gfw"
   email = "umiringo42@gmail.com"
   github = "umiringo"
   twitter = "umiringo42"
   facebook = "umiringo42"
   logo = "/images/logo.png"
+  
