--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,23 @@ script:
   - hugo
 
 before_deploy:
-  - openssl aes-256-cbc -K $encrypted_3c7444b0f500_key -iv $encrypted_3c7444b0f500_iv -in travis.enc -out ~\/my_travis/travis -d  
+  - openssl aes-256-cbc -K $encrypted_3c7444b0f500_key -iv $encrypted_3c7444b0f500_iv -in travis.enc -out ~/my_travis/travis -d  
   - eval $(ssh-agent -s)
-  - chmod 600 ~/.ssh/id_rsa
+  - chmod 600 ~/my_travis/travis
+  - ssh-add ~/my_travis/travis
   - cho -e "Host ${DEPLOY_HOST}\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+
+deploy:
+ provider: script
+  skip-cleanup: true
+  script: rsync -r --quiet --delete-after ${TRAVIS_BUILD_DIR}/public/* ${DEPLOY_USER}@${DEPLOY_HOST}:${DEPLOY_DIRECTORY}
+  on:
+    branch: master
+
+env:
+  global:
+    - PRODUCTION=true
+    - HUGO_RELEASE=0.57.2
+    - secure: <a long string of random looking ASCII chars ending with an equal sign>
+    - secure: <another long ASCII string ending with an equal sign>
+    - secure: <and another long ASCII string ending with an equal sign>
