--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ deploy:
     script: rsync -r --quiet --delete-after ${TRAVIS_BUILD_DIR}/public/* ${DEPLOY_USER}@${DEPLOY_HOST}:${DEPLOY_DIRECTORY}
     skip_cleanup: true
     on:
-      branch: source # or master if you are using the two-repository approach
+      branch: master # or master if you are using the two-repository approach
 
 branches:
   only:
