--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_deploy:
 
 deploy:
   - provider: script
-    script: rsync -r --e 'ssh -p ${DEPLOY_PORT}' --quiet --delete-after ${TRAVIS_BUILD_DIR}/public/* ${DEPLOY_USER}@${DEPLOY_HOST}:${DEPLOY_DIRECTORY}
+    script: rsync -r -e 'ssh -p ${DEPLOY_PORT}' --quiet --delete-after ${TRAVIS_BUILD_DIR}/public/* ${DEPLOY_USER}@${DEPLOY_HOST}:${DEPLOY_DIRECTORY}
     skip_cleanup: true
     on:
       branch: master
