--- a/config.toml
+++ b/config.toml
@@ -5,16 +5,16 @@ title = "umiringo's nest"
 preserveTaxonomyNames = true
 enableRobotsTXT = true
 enableEmoji = true
-theme = "light-hugo"
+theme = "m10c"
 enableGitInfo = false # use git commit log to generate lastmod record # 可根据 Git 中的提交生成最近更新记录。
 disablePathToLower = true # 禁止将路径全部改为小写
 # Syntax highlighting by Chroma. NOTE: Don't enable `highlightInClient` and `chroma` at the same time!
 pygmentsOptions = "linenos=table"
 pygmentsCodefences = true
-#pygmentsUseClasses = true
+pygmentsUseClasses = true
 pygmentsCodefencesGuessSyntax = true
 pygmentsStyle = "monokai"
-markup = "markdown" # 格式化 markdown
+# markup = "markdown" # 格式化 markdown
 hasCJKLanguage = true     # has chinese/japanese/korean ? # 自动检测是否包含 中文\日文\韩文
 paginate = 10                                           # 首页每页显示的文章数
 #disqusShortname = ""      # disqus_shortname
@@ -24,14 +24,38 @@ copyright = "© Copyright 2019 umiringo"            # default: author.name ↓  
 [blackfriday]
   smartypants = false
 
-[author]                  # essential                     # 必需
-  name = "umiringo"
-
 [params]
+  author = "umiringo"
   description = "fuck gfw"
-  email = "umiringo42@gmail.com"
-  github = "umiringo"
-  twitter = "umiringo42"
-  facebook = "umiringo42"
-  logo = "/images/logo.png"
-  
+  avatar = "/images/logo.png"
+
+  [[params.social]]
+    name = "github"
+    url = "https://github.com/umiringo"
+  [[params.social]]
+    name = "twitter"
+    url = "https://twitter.com/umiringo42"
+
+  # Brown theme
+  #[params.style]
+  #  darkestColor = "#463625"
+  #  darkColor = "#2a3738"
+  #  primaryColor = "#eeee6a"
+  #  lightColor = "#96a879"
+  #  lightestColor = "#ffffff"
+
+  # Green theme
+  #[params.style]
+  #  darkestColor = "#315659"
+  #  darkColor = "#253031"
+  #  primaryColor = "#dad865"
+  #  lightColor = "#96a879"
+  #  lightestColor = "#fff"
+
+  # Red and black theme
+  #[params.style]
+  #  darkestColor = "#d35050"
+  #  darkColor = "#212121"
+  #  primaryColor = "#ffffff"
+  #  lightColor = "#a2a2a2"
+  #  lightestColor = "#d3d3d3"
