--- a/config.toml
+++ b/config.toml
@@ -12,14 +12,14 @@
 # For developpers, if you modify this theme, put your images in `source/images` folder and
 # use grunt task `build` to synchronize assets
 
-baseURL = "https://umiringo.com/"
+baseURL = "http://www.umiringo.com/"
 languageCode = "en-us"
 defaultContentLanguage = "en-us"
 title = "umiringo's nest"
 theme = "hugo-tranquilpeak-theme"
-#disqusShortname = "hugo-tranquilpeak-theme"
+disqusShortname = "www-umiringo-com"
 # googleAnalytics = "UA-123-45"
-paginate = 7
+paginate = 8
 canonifyurls = true
 
 [permalinks]
@@ -34,7 +34,7 @@ canonifyurls = true
   name = "umiringo"
   bio = "fuck gfw"
   job = "game developer"
-  location = "???"
+  location = "?????"
   # Your Gravatar email. Overwrite `author.picture` everywhere in the blog
   gravatarEmail = "umiringo42@gmail.com"
   # Your profile picture
@@ -52,12 +52,6 @@ canonifyurls = true
   name = "Home"
   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-home\"></i>"
   url = "/"
-[[menu.main]]
-  weight = 4
-  identifier = "archives"
-  name = "Archives"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-archive\"></i>"
-  url = "/archives"
 # [[menu.main]]
 #   weight = 2
 #   identifier = "categories"
@@ -70,6 +64,18 @@ canonifyurls = true
 #   name = "Tags"
 #   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-tags\"></i>"
 #   url = "/tags"
+[[menu.main]]
+  weight = 4
+  identifier = "archives"
+  name = "Archives"
+  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-archive\"></i>"
+  url = "/archives"
+# [[menu.main]]
+#   weight = 5
+#   identifier = "about"
+#   name = "About"
+#   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-question\"></i>"
+#   url = "/#about"
 
 # [[menu.links]]
 #   weight = 1
@@ -77,7 +83,19 @@ canonifyurls = true
 #   name = "GitHub"
 #   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-github\"></i>"
 #   url = "https://github.com/kakawait"
+# [[menu.links]]
+#   weight = 2
+#   identifier = "stackoverflow"
+#   name = "Stack Overflow"
+#   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-stack-overflow\"></i>"
+#   url = "https://stackoverflow.com/users/636472/kakawait"
 
+# [[menu.misc]]
+#   weight = 1
+#   identifier = "rss"
+#   name = "RSS"
+#   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-rss\"></i>"
+#   url = "/index.xml"
 
 [params]
   # Customize date format use to render blog post date, categories and other
@@ -100,7 +118,7 @@ canonifyurls = true
   # If false it will flat categories.
   hierarchicalCategories = true
 
-  description = "fuck gfw"
+  description = "Hugo tranquilpeak theme demo"
 
   # Customization
   # Define the behavior of the sidebar
@@ -115,7 +133,7 @@ canonifyurls = true
   #    large sidebar is swiped on all lower screens
   # 5: Display header bar on all screens and large sidebar is swiped on large screen
   # 6: Display header bar on all screens and medium sidebar is swiped
-  sidebarBehavior = 2
+  sidebarBehavior = 1
 
   # Your blog cover picture. I STRONGLY recommend you to use a CDN to speed up loading of pages.
   # There is many free CDN like Cloudinary or you can also use indirectly
@@ -140,7 +158,7 @@ canonifyurls = true
   autoThumbnailImage = true
 
   # Your favicon path, default is "/favicon.png"
-  favicon = "/images/favicon.ico"
+  # favicon = "/favicon.png"
 
   # Header configuration
   # The link at the right of the header is customizable
@@ -177,6 +195,11 @@ canonifyurls = true
     name = "Twitter"
     icon = "fa-twitter"
     url = "https://twitter.com/intent/tweet?text=%s"
+
+#   [[params.sharingOptions]]
+#     name = "Google+"
+#     icon = "fa-google-plus"
+#     url = "https://plus.google.com/share?url=%s"
 
   [params.header.rightLink]
     class = ""
